2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Add check and cflags for malloc(0) returning NULL.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* Makefile.am:
	* man/Makefile.am: 
	Use sed to put version number in man page
	Add shadow man pages for man pages that document multiple functions.

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Add man page to build

2005-07-08  Keith Packard  <keithp@keithp.com>

	reviewed by: <delete if not using a buddy>

	* .cvsignore:
	* include/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com

	* COPYING:
	* Makefile.am:
	* NEWS:
	* README
	* autogen.sh:
	* configure.ac:
	* src/Makefile.am:
	Initial modularization.

ChangeLog from Xorg monolithic tree:

2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* include/extensions/Xevie.h:
	* include/extensions/Xeviestr.h:
	* lib/Xevie/Xevie.c:
	Move request id definitions to Xeviestr.h, leaving Xevie.h for
	client library definitions and Xeviestr.h for protocol definitions
	to allow cleaner split in modularization.

2005-04-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* lib/Xevie/Xevie.man:
	Clean up text and formatting of Xevie man page
	
2004-08-16  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* lib/Xevie/Imakefile:
	Fix build problem with xevie.pc

2004-08-16  Stuart Kreitman  <stukreit@freedesktop.org>
	* xc/lib/Imakefile
	* xc/lib/Xext/Imakefile
	* xc/lib/Xext/Attic/Xevie.c moved to lib/Xevie
	* xc/lib/Xevie/Imakefile
	* xc/lib/Xevie/Xevie.c
	* xc/lib/Xevie/Xevie.man
	* xc/lib/Xevie/xevie.pc.in
	* xc/lib/Xevie/xevieplaceholder.h